--- a/src/app/components/seller/setup-seller-priorities/setup-seller-priorities.component.html
+++ b/src/app/components/seller/setup-seller-priorities/setup-seller-priorities.component.html
@@ -389,7 +389,7 @@
     
                         <span *ngIf="selectedCompoundNotValid">{{'validation.This Filed Is Required!' | translate}}</span>
                         
-                        <span (click)="changedCheckBox()" class="hint_span" *ngIf="!checkboxVar">{{'setPriorities.choose compound' | translate}}</span>
+                        <span (click)="changedCheckBox()" class="hint_span" *ngIf="!checkboxVar">{{'setPriorities.select compound' | translate}}</span>
 
 
                     </div>
