--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -28,7 +28,7 @@
                                         [searchCountryFlag]="true"
                                         [searchCountryField]="[SearchCountryField.Iso2, SearchCountryField.Name]"
                                         [selectFirstCountry]="false" [selectedCountryISO]="CountryISO.Egypt"
-                                        [maxLength]="'11'" [phoneValidation]="true"
+                                        [maxLength]="10" [phoneValidation]="true"
                                         [separateDialCode]="separateDialCode"
                                         name="phone"
                                         formControlName="phone"
