--- a/src/app/shared/components/edit-profile/edit-profile.component.html
+++ b/src/app/shared/components/edit-profile/edit-profile.component.html
@@ -45,10 +45,11 @@
                                             [enablePlaceholder]="true" [searchCountryFlag]="true"
                                             [searchCountryField]="[SearchCountryField.Iso2, SearchCountryField.Name]"
                                             [selectFirstCountry]="false" [selectedCountryISO]="CountryISO.Egypt"
-                                            [maxLength]="'11'" [phoneValidation]="true"
+                                            [maxLength]="10" [phoneValidation]="true"
                                             [separateDialCode]="separateDialCode"
                                             [numberFormat]="PhoneNumberFormat.National" name="phone"
-                                            formControlName="phone">
+                                            formControlName="phone"
+                                            customPlaceholder = "123 456 7891">
                                         </ngx-intl-tel-input>
                                         <div *ngIf="(phoneForm.get('phone')?.status === 'INVALID' && phoneForm.get('phone')?.touched)"
                                             class="text-invalid">
