--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -1974,6 +1974,7 @@
                 height: 100%;
                 position: relative;
                 background: transparent;
+                cursor: pointer;
 
                 @media (max-width: 450px) {
                     height: fit-content;
@@ -2134,6 +2135,7 @@
                 background: white;
                 padding: 15px 15px;
                 align-items: center;
+                cursor: pointer;
 
                 @media (max-width: 450px) {
                     height: fit-content;
